[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Legacy-6YgdM.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Login/Login_validator.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 487.0
margin_top = 149.0
margin_right = 792.0
margin_bottom = 571.0
custom_constants/separation = 9
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 305.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0.764706, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Login               "
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 305.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 50 )

[node name="Email" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 305.0
margin_bottom = 122.0
text = "Email"

[node name="EmailEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 305.0
margin_bottom = 155.0

[node name="Password" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 305.0
margin_bottom = 178.0
text = "Password"

[node name="PasswordEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 305.0
margin_bottom = 211.0
secret = true

[node name="Notification" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 305.0
margin_bottom = 234.0

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 305.0
margin_bottom = 293.0
rect_min_size = Vector2( 0, 50 )

[node name="Login" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 305.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 2 )
text = "LOGIN"

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 357.0
margin_right = 305.0
margin_bottom = 367.0
rect_min_size = Vector2( 0, 10 )

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 376.0
margin_right = 305.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 3 )
text = "BACK"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
